--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,33 +11,60 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	
+	--lightTheme-background-down: #ddd;
+	--darkTheme-background-down: #222;
+	--lightTheme-text-down: #222;
+	--darkTheme-text-down: #ddd;
+	--lightTheme-primary: #646cff;
+	--darkTheme-primary: #646cff;
+	--lightTheme-primary-up: #9298ff;
+	--darkTheme-primary-up: #9298ff;
+	--lightTheme-primary-down: #3741ff;
+	--darkTheme-primary-down: #3741ff;
+	
+	--background-down: var( --lightTheme-background-down );
+	--text-down: var(--lightTheme-text-down);
+	--primary-up: var( --lightTheme-primary-up );
+	--primary-down: var( --lightTheme-primary-down );
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		
-		/* color: #213547; */
-		
-		/* background-color: #ffffff; */
+@media ( prefers-color-scheme: dark ){
+	:root{
+		--background-down: var( --darkTheme-background-down );
+		--text-down: var( --darkTheme-text-down );
+		--primary-up: var( --darkTheme-primary-up );
+		--primary-down: var( --darkTheme-primary-down );
 	}
-	a:hover {
-		
-		/* color: #747bff; */
-	}
-	button {
-		
-		/* background-color: #f9f9f9; */
-	}
+}
+
+.light-mode{
+	--background-down: var( --lightTheme-background-down );
+	--text-down: var(--lightTheme-text-down);
+	--primary-up: var( --lightTheme-primary-up );
+	--primary-down: var( --lightTheme-primary-down );
+}
+
+.dark-mode{
+	--background-down: var( --darkTheme-background-down );
+	--text-down: var( --darkTheme-text-down );
+	--primary-up: var( --darkTheme-primary-up );
+	--primary-down: var( --darkTheme-primary-down );
+}
+
+:focus{
+	outline: 1px solid var( --primary-up );
+	border-color: var(--primary-up);
 }
 
 a{
 	font-weight: 500;
 	
-	/* color: #646cff; */
-	text-decoration: inherit;
-	
-	/* :hover { color: #535bf2; } */
+	color: var( --primary );
+	text-decoration: inherit;	
 }
+
+a:hover, a:focus { color: var( --primary-up ); }
 
 body {
 	margin: 0;
@@ -59,16 +86,9 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	
-	/* background-color: #1a1a1a; */
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
-button:hover {
-	b
-	/* order-color: #646cff; */
-}
+button:hover { border-color: var( --primary-up ); }
 button:focus,
-button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
-}
+button:focus-visible { border-color: var(--primary-up); }
