--- a/front-end/src/components/Tabela.css
+++ b/front-end/src/components/Tabela.css
@@ -76,6 +76,7 @@ div.status { display: none; }
 	text-decoration: none;
 	display: inline-block;
 	cursor: pointer;
+	margin: 0;
 	border: var( --border-width ) solid var( --primary );
 }
 
